Adding map locations support with endpoint
