# PublicTransport/PublicTransport.WebAPI/Controllers/TripController.cs
@@ -12,7 +12,7 @@ namespace PublicTransport.WebAPI.Controllers
     {
         private static readonly TripRepository TripRepository = new TripRepository(new PublicTransportContext());
 
-        [HttpPost]
+        [HttpPost, Route("trip/search")]
         public IHttpActionResult Search(HttpRequestMessage request, [FromBody]RouteSearchFilter filter)
         {
             if (filter != null && filter.IsValid)
@@ -22,6 +22,16 @@ namespace PublicTransport.WebAPI.Controllers
                 return Ok(tripsDto);
             }
             return BadRequest("The supplied filter is invalid");
+        }
+
+        [HttpPost, Route("trip/mapData")]
+        public IHttpActionResult MapData(HttpRequestMessage request, [FromBody] TripSegmentFilter filter)
+        {
+            if (filter == null) return BadRequest("No filter was supplied");
+            if (!filter.IsValid) return BadRequest("The supplied filter is invalid");
+            var stops = TripRepository.GetTripSegment(filter);
+            var stopsDto = stops.Where(st => st.Shape != null).Select(st => new MapMarker(st)).ToList();
+            return Ok(stopsDto);
         }
     }
 }
